<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#442d28"
    tools:context=".MainActivity">

    <TextView

        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#442d28"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <Button
                android:id="@+id/button_c2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_c2"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_div"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.211" />

            <Button
                android:id="@+id/button_7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_7"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_div"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.404" />


            <Button
                android:id="@+id/button_4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_4"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_div"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.597" />


            <Button
                android:id="@+id/button_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_1"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_div"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.597" />


            <Button
                android:id="@+id/button_0"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_0"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_div"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.597" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/button_div"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_div"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_multi"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_c2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.211" />


            <Button
                android:id="@+id/button_8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_8"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.341"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.403" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_5"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.339"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.596" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_2"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_div"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.597" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_02"
                android:textSize="40sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_div"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.597" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/button_multi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_multi"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_sub"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_div"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.211" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_9"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.656"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.403" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_6"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.656"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.596" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_3"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_div"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.597" />

            <Button
                android:id="@+id/button_period"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_period"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_div"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.597" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/button_sub"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_sub"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_multi"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.211" />


            <Button
                android:id="@+id/button_add"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_add"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.974"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.488" />

            <Button
                android:id="@+id/button_eq"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:background="@drawable/circle_button"
                android:text="@string/button_eq"
                android:textSize="60sp"
                app:backgroundTint="#653d26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.974"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.488" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>